--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <noscript>
-    <meta http-equiv="refresh" content="0;URL=https://uxday-2022.eventbrite.it/">
+    <meta http-equiv="refresh" content="0;URL=https://2022.uxday.it/">
     </noscript>
     <script type="text/javascript">
-      window.location = "https://uxday-2022.eventbrite.it/";
+      window.location = "https://2022.uxday.it/";
     </script>
   </head>
   <body></body>
