--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
+    <title>uxday 2023</title>
     <noscript>
-    <meta http-equiv="refresh" content="0;URL=https://2022.uxday.it/">
+    <meta http-equiv="refresh" content="0;URL=https://2023.uxday.it/">
     </noscript>
     <script type="text/javascript">
-      window.location = "https://2022.uxday.it/";
+      window.location = "https://2023.uxday.it/";
     </script>
   </head>
   <body></body>
